<resources>
    <string name="app_name">Homework7</string>
    <string name="email_hint">email...</string>
    <string name="password_hint">password...</string>
    <string name="signin_button">Sign-In</string>
    <string name="signup_button">Sign-Up</string>
    <string name="create_button">Create Account</string>
    <string name="app_id">1135620823201642</string>
    <string name="server_token">724320156183-pc80ogh4ctreekrcv49bddfu7hsm0n1u.apps.googleusercontent.com</string>
    <string name="cancel_button">Cancel</string>
    <string name="signup_title">Sign-Up for an Account</string>
    <string name="edit_button">edit</string>
    <string name="users_btn">view other users</string>
    <string name="messages_btn">view my messages</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="alert_gender">Gender:</string>
    <string name="alert_gender_title">Please fill out your gender.</string>
    <string name="message_user_title">What would you like to say?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
