<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:focusableInTouchMode="true">

    <TextView
        android:text="@string/signup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alert_title_tv"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@color/alert_salmon"
        android:textColor="@android:color/white"
        android:layout_weight="0.05"
        android:paddingTop="15dp"
        android:paddingBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/alert_name_et"
        android:layout_weight="0.05"
        android:hint="Full Name..."
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/alert_email_et"
        android:layout_weight="0.05"
        android:hint="Email..."
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="6dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/alert_choose_et"
        android:layout_weight="0.05"
        android:hint="Choose Password..."
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="6dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/alerty_retype_et"
        android:layout_weight="0.05"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="6dp"
        android:hint="Retype Password..." />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05">

        <TextView
            android:text="@string/alert_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/alert_gender_tv"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:id="@+id/alert_radiogroup">

            <RadioButton
                android:text="@string/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alert_male_rb"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alert_female_rb"
                android:layout_weight="1"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>