<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.homework7.MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/password_et"
        android:hint="@string/password_hint"
        android:layout_below="@+id/username_et"
        android:layout_alignLeft="@+id/username_et"
        android:layout_alignStart="@+id/username_et"
        android:layout_alignRight="@+id/username_et"
        android:layout_alignEnd="@+id/username_et" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="65dp"
        android:id="@+id/username_et"
        android:hint="@string/username_hint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/google_fb_linear"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/sign_create_linear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="160dp">

        <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="18sp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/facebook_btn"
            android:layout_marginBottom="54dp"
            android:layout_weight="1"
            android:paddingBottom="10dp" />

        <com.google.android.gms.common.SignInButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/google_btn"
            android:layout_marginBottom="10dp"
            android:layout_gravity="top" />
    </LinearLayout>

    <Button
        android:text="@string/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:id="@+id/signup_btn"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_create_linear"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password_et"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/signin_button"
            android:layout_width="0dp"
            android:id="@+id/signin_btn"
            android:textAllCaps="false"
            android:padding="0dp"
            android:textSize="18sp"
            android:elevation="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_above="@+id/google_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/create_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/create_account_btn"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>
